name:                hworker
version:             0.1.0.0
synopsis:            A reliable queue of jobs built on top of redis.
-- description:
homepage:            http://github.com/dbp/hworker
license:             ISC
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     System.Hworker
  other-modules:       Data.Aeson.Helpers
  -- other-extensions:
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , hedis >= 0.6.5
                     , text
                     , bytestring
                     , time >= 1.5
                     , attoparsec
                     , uuid >= 1.2.6
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite hworker-test
  type:            exitcode-stdio-1.0
  hs-source-dirs:  src test
  main-is:         Spec.hs
  other-modules: Data.Aeson.Helpers
               , System.Hworker
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , hedis >= 0.6.5
                     , text
                     , bytestring
                     , time >= 1.5
                     , attoparsec
                     , uuid >= 1.2.6
                     , hspec >= 2
                     , hspec-contrib
                     , HUnit


executable print_example
  hs-source-dirs: example
  main-is: Main.hs
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , hedis >= 0.6.5
                     , text
                     , bytestring
                     , time >= 1.5
                     , attoparsec
                     , uuid >= 1.2.6
                     , hworker
  default-language:    Haskell2010