name:                hworker
version:             0.1.0.1
synopsis:            A reliable at-least-once job queue built on top of redis.
description:         See README.
homepage:            http://github.com/positiondev/hworker
license:             ISC
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     System.Hworker
  other-modules:       Data.Aeson.Helpers
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , hedis >= 0.6.5
                     , text
                     , bytestring
                     , time >= 1.5
                     , attoparsec
                     , uuid >= 1.2.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

Test-Suite hworker-test
  type:            exitcode-stdio-1.0
  hs-source-dirs:  src test
  main-is:         Spec.hs
  other-modules: Data.Aeson.Helpers
               , System.Hworker
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , hedis >= 0.6.5
                     , text
                     , bytestring
                     , time >= 1.5
                     , attoparsec
                     , uuid >= 1.2.6
                     , hspec >= 2
                     , hspec-contrib
                     , HUnit
